--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Coverview",
-  "name": "Coverview",
+  "short_name": "CoverMe",
+  "name": "CoverMe",
   "icons": [
     {
       "src": "favicon.ico",
